corrected broken css element tags

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,39 +1,44 @@
 * {
     box-sizing: border-box;
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
 }
 
 body {
     background-color: #d9dcd6;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    display: grid;
-    grid-column-gap: 1em;
-    grid-template-rows: 95px 89vh auto 100px;
-    grid-template-columns: auto 70% auto auto;
-    grid-template-areas: "header header header header"
-    "hero hero hero hero"
-    ". main sidebar ."
-    "footer footer footer footer";
 }
 
-header h1, footer {
+header {
+    padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #2a607c;
+    color: #ffffff;
 }
 
-h1 {
-    display: inline-block; 
+header h1 {
+    display: inline-block;
     font-size: 48px;
 }
 
-h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
+header h1 .seo {
+    color: #d9dcd6;
 }
 
-h3 {
-    margin-bottom: 10px;
-    text-align: center;
+header nav {
+    padding-top: 15px;
+    margin-right: 20px;
+    float: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}
+
+header nav ul {
+    list-style-type: none;
+}
+
+header nav ul li {
+    display: inline-block;
+    margin-left: 25px;
 }
 
 a {
@@ -45,195 +50,99 @@ p {
     font-size: 16px;
 }
 
-hr {
-    margin: 25px 0;
-}
-
-header {
-    grid-area: header;
+.hero {
+    height: 800px;
     width: 100%;
-    background-color: #2a607c;
-    position: fixed;
-    top: 0;
-	left: 0;
+    margin-bottom: 25px;
+    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.float-left {
+    float: left;
+    margin-right: 25px;
+}
+
+.float-right {
+    float: right;
+    margin-left: 25px;
+}
+
+.main-column {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+
+.right-column {
+    margin-right: 20px;
     padding: 20px;
-    color: #ffffff;
-}
-
-/* Styling for Horiseon h1 logo */
-.seo {
-    color: #d9dcd6;
-}
-
-/* Nav styling starts here */
-
-nav {
-	float: right;
-    padding: 20px;
-    font-size: 20px;
-}
-
-nav ul {
-	list-style: none;
-}
-
-nav li {
-	display: inline-block;
-    padding: 0 10px;
-}
-
-/* Hamburger menu image properties */
-#menu-icon {
-	display: hidden;
-	width: 40px;
-	height: 40px;
-	background: url("../images/hamburg-menu.png") center;
-}
-
-a:hover#menu-icon {
-	border-radius: 4px 4px 0 0;
-}
-
-/* Banner image size and styling */
-figure.hero {
-    grid-area: hero;
-} 
-
-.hero > img {
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-}
-
-/* Left column properties */
-main.main-column {
-    grid-area: main;
-    color: #ffffff;
-    margin-top: 1em;
-    display: grid;
-    grid-gap: 1em;
-    grid-template-rows: auto auto auto;
-}
-
-/* Individual services section properties */
-
-article.services {
-    background-color: #0072bb;
-    padding: 25px;
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-gap: 2em;
-    justify-content: center;
-    align-items: center; 
-}
-
-/* Right column properties */
-
-aside.right-column {
-    grid-area: sidebar;
-    margin-top: 1em;
+    clear: both;
+    float: right;
+    width: 20%;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-    color: white;
-    padding: 25px;
+}
+
+section h3  {
+    margin-bottom: 32px;
+    color: #ffffff;
+    margin-bottom: 10px;
     text-align: center;
-} 
+}
 
-.right-column img {
+
+section img {
+    display: block;
+    margin: 10px auto;
     max-width: 150px;
-} 
+}
 
-.right-column p {
-    text-align: left;
+#search-engine-optimization {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+#online-reputation-management {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+#social-media-marketing {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.services img {
+    max-height: 200px;
+}
+
+.services h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
 footer {
-    grid-area: footer;
+    padding: 30px;
+    clear: both;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-    padding: 20px 0;
 }
 
-footer h4 {
+footer h2 {
     font-size: 20px;
-    padding-bottom: 10px;
-}
-
-/* check size of device to adjust nav for small screens and mobile */
-@media only screen and (max-width : 1080px) {
-
-    /* Switch to three columns */
-    body {
-        grid-template-rows: 95px auto auto auto 100px;
-        grid-template-columns: auto auto auto;
-        grid-template-areas: "header header header"
-        "hero hero hero"
-        ". main ."
-        ". sidebar ."
-        "footer footer footer";
-    }
-
-    /* Mobile menu properties */
-	#menu-icon {
-
-		display:inline-block;
-
-    }
-    
-    nav {
-        padding: 10px 20px;
-        font-size: 20px;
-    }
-
-	nav ul, nav:active ul { 
-		display: none;
-		position: absolute;
-		padding: 20px;
-        background-color: #2a607c;
-        opacity: .7;
-		border: 3px solid #0072bb;
-		right: 50px;
-		top: 60px;
-		width: 340px;
-		border-radius: 4px 0 4px 4px;
-	}
-
-	nav li {
-		text-align: center;
-		width: 100%;
-		padding: 10px 0;
-		margin: 0;
-    }
-    nav li.hide-list-item {
-        display: none;
-    }
-
-	nav:hover ul {
-		display: block;
-    }
-
-    /* Services sections add flexbox */
-
-    article.services {
-        background-color: #0072bb;
-        padding: 25px;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center; 
-    }
-
-    /* reorder images for consistency */
-
-    article.services img {
-        order: 2;
-        padding-top: 20px;
-    }
-
-    /* increase width of services and right column to fill mobile. */
-
-    div.services-text {
-        max-width: 85%;
-        }
-    aside.right-column {
-        flex-basis: 100%;
-    }
 }
